--- a/index.html
+++ b/index.html
@@ -52,27 +52,27 @@
 <body>
     <!-- Videos de fondo -->
     <video class="background-video" id="bgVideo1" muted>
-        <source src="./comerciales/1.mp4" type="video/mp4">
+        <source src="./1.mp4" type="video/mp4">
     </video>
     <video class="background-video" id="bgVideo2" muted>
-        <source src="./comerciales/2.mp4" type="video/mp4">
+        <source src="./2.mp4" type="video/mp4">
     </video>
     <video class="background-video" id="bgVideo3" muted>
-        <source src="./comerciales/3.mp4" type="video/mp4">
+        <source src="./3.mp4" type="video/mp4">
     </video>
 
     <!-- Videos superpuestos -->
     <video class="overlay-video" id="video1">
-        <source src="emergentes/frase1.mp4" type="video/mp4">
+        <source src="./frase1.mp4" type="video/mp4">
     </video>
     <video class="overlay-video" id="video2">
-        <source src="emergentes/frase2.mp4" type="video/mp4">
+        <source src="./frase2.mp4" type="video/mp4">
     </video>
     <video class="overlay-video" id="video3">
-        <source src="emergentes/frase3.mp4" type="video/mp4">
+        <source src="./frase3.mp4" type="video/mp4">
     </video>
     <video class="overlay-video" id="video4">
-        <source src="emergentes/frase4.mp4" type="video/mp4">
+        <source src="./frase4.mp4" type="video/mp4">
     </video>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"></script>
